@@ -16,10 +16,5 @@ Extracting manual examples for Plain file.autodoc Test package ...
 Chapter 1 : extracted 2 examples
 
 #
-gap> AUTODOC_TestWorkSheet("plain");
-Extracting manual examples for Plain Text Mode Test package ...
-1 chapters detected
-Chapter 1 : extracted 2 examples
-
 #
 gap> STOP_TEST( "worksheets.tst" );
