@@ -1,11 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<!-- This is an automatically generated file. -->
-<TitlePage>
-  <Title>
-    Plain Text Mode Test
-  </Title>
-  <Date>
-    30 August 2018
-  </Date>
-  </TitlePage>
